--- a/nfc-android/app/src/main/res/values/strings.xml
+++ b/nfc-android/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="servicedesc">VNOS NFC SERVICE</string>
+    <string name="aiddescription">AID Description</string>
 </resources>
